--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@material-ui/core": "^4.11.0",
     "bootstrap": "4.5.3",
-    "ng-bootstrap": "8.0.0",
+    "file-saver": "^2.0.5",
+    "ng-bootstrap": "1.6.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -36,7 +37,7 @@
     "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.1",
     "@angular/language-service": "^11.0.1",
-    "@fortawesome/angular-fontawesome": "0.8.1",
+    "@fortawesome/angular-fontawesome": "^0.8.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
